Add profile image to index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <header>
         <h1>Hi, I'm Seema 👋</h1>
+        <img src="profile.jpg" alt="Seema Profile" class="profile-pic">
         <p>Computer Science Engineering Student</p>
     </header>
 
