--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <h2>Projects</h2>
     <div class="card-container">
         <div class="card">
-            <h3>Earthecho- Environment mood tracker</h3>
+            <h3>Earthecho- Environment Mood Tracker</h3>
             <p>A small application using basic techniques-Flutter(Dart), Git, Openweather aPI, VS Code</p>
         </div>
     </div>
@@ -56,6 +56,7 @@
     <h2>Contact</h2>
     <p>Email: seemaaratal6@gmail.com</p>
     <p>GitHub: github.com/seemaaratal</p>
+    <p>Linkedin: https://www.linkedin.com/in/seema-aratal-ab5a522a4</p>
 </section>
 
 <footer>
