--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
         <h1>Hi, I'm <span>Seema 👋</span></h1>
         <p>Computer Science Engineering Student | AI & Web Enthusiast</p>
         <a href="#contact" class="btn">Contact Me</a>
+        <a href="SA_resume.pdf" download class="btn resume-btn">Download Resume</a>
+</div>
     </div>
     <img src="profile.jpg" alt="Profile" class="profile-pic">
 </section>
