Make contact information clickable in index.html
Updated contact section to include clickable email and social media links.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 </nav>
 
 <section class="hero">
+    <div class="hero-img">
+        <img src="profile.jpg" alt="Seema" class="profile-pic">
+    </div>
     <div class="hero-text">
         <h1>Hi, I'm <span>Seema 👋</span></h1>
         <p>Computer Science Engineering Student | AI & Web Enthusiast</p>
@@ -56,9 +59,9 @@
 
 <section id="contact">
     <h2>Contact</h2>
-    <p>Email: seemaaratal6@gmail.com</p>
-    <p>GitHub: github.com/seemaaratal</p>
-    <p>Linkedin: https://www.linkedin.com/in/seema-aratal-ab5a522a4</p>
+    <p>Email: <a href="mailto:seemaaratal6@gmail.com">seemaaratal6@gmail.com</a></p>
+    <p>GitHub: <a href="https://github.com/seemaaratal">github.com/seemaaratal</a></p>
+    <p>Linkedin: <a href:"https://www.linkedin.com/in/seema-aratal-ab5a522a4" target="_blank">View Profile</a></p>
 </section>
 
 <footer>
