Fix typo in LinkedIn link text

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <h2>Contact</h2>
     <p>Email: <a href="mailto:seemaaratal6@gmail.com">seemaaratal6@gmail.com</a></p>
     <p>GitHub: <a href="https://github.com/seemaaratal">github.com/seemaaratal</a></p>
-    <p>Linkedin: <a href:"https://www.linkedin.com/in/seema-aratal-ab5a522a4" target="_blank">View Profile</a></p>
+    <p>Linkedin: <a href:"https://www.linkedin.com/in/seema-aratal-ab5a522a4" target="_blank">View-Profile</a></p>
 </section>
 
 <footer>
